# cookiecutter-python-flit

./: cookiecutter.json
{{cookiecutter.project_slug}}/: noxfile.py  pyproject.toml
