[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "{{ cookiecutter.project_slug }}"
authors = [{name = "{{ cookiecutter.author_name }}", email = "{{ cookiecutter.author_email }}"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
requires-python = ">=3.7"
dependencies = [
	     "typer >= 0.3.2",
	     "pydantic >= 1.9"
]

[project.scripts]
{{ cookiecutter.project_slug }} = "{{ cookiecutter.project_slug }}.cli.main:app"

[project.optional-dependencies]
test = [
    "pytest",
]

[project.urls]
Home = "https://github.com/{{ cookiecutter.github_name }}/{{ cookiecutter.project_slug }}"

[tool.flit.module]
name = "{{ cookiecutter.project_slug }}"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "test",
]

[tool.black]
line-length = 120
